@@ -492,8 +492,9 @@ usb_cb_setup (uint8_t req, uint8_t req_no,
 
 int
 usb_cb_get_descriptor (uint8_t rcp, uint8_t desc_type, uint8_t desc_index,
-		       uint16_t index)
+		       uint16_t index, uint16_t length)
 {
+  (void)length;
 #ifdef FRAUCHEKY_SUPPORT
   if (!running_neug)
     return fraucheky_get_descriptor (rcp, desc_type, desc_index, index);
